2017-03-02  Richard Biener  <rguenther@suse.de>

PR tree-optimization/79777
	* tree-ssa-pre.c (eliminate_insert): Give up if we simplify
	the to insert expression to sth existing.

	* gcc.dg/torture/pr79777.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@245830 138bc75d-0d04-0410-961f-82ee72b054a4